--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.0",
     "daisyui": "^2.47.0",
     "react": "^18.2.0",
     "react-daisyui": "^3.0.2",
